--- a/package.json
+++ b/package.json
@@ -1,15 +1,16 @@
 {
-  "name": "mineflayer-sursmp-register-bots",
-  "version": "1.0.0",
-  "description": "30 bots auto /register, /login, /server sursmp, join từ từ",
+  "name": "craftvn-ht1-bots",
+  "version": "1.0.2",
+  "description": "Dream & Marlow HT1 PvP mineflayer bots (auto eat, pearl, web, bow, totem, gapple)",
   "main": "bot.js",
   "scripts": {
     "start": "node bot.js"
   },
   "dependencies": {
-    "mineflayer": "^4.20.0",
-    "mineflayer-pathfinder": "^2.6.1",
-    "mineflayer-auto-eat": "^2.3.0",
-    "mineflayer-pvp": "^1.3.0"
+    "mineflayer": "^4.31.0",
+    "mineflayer-pathfinder": "^2.4.5",
+    "mineflayer-auto-eat": "^4.0.0",
+    "mineflayer-pvp": "^1.3.2",
+    "vec3": "^0.1.10"
   }
 }
