--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,31 +1,30 @@
-name: CRAFTVN Bot Sursmp
+name: Join
 
 on:
-  push:
-    branches: [ "main" ]
-  workflow_dispatch:
+  workflow_dispatch:  # để bạn bấm "Run workflow" bằng tay
 
 jobs:
-  run-bot:
+  run-bots:
     runs-on: ubuntu-latest
+    timeout-minutes: 360   # tối đa 15 phút
 
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Setup Node.js
+      - name: Setup Node
         uses: actions/setup-node@v4
         with:
-          node-version: '18'
-          cache: 'npm'
+          node-version: 18
 
-      - name: Install dependencies
-        run: |
-          npm install
+      - name: Install deps
+        run: npm install
 
-      # Chạy bot rất lâu, dùng timeout cho chắc
-      - name: Start bot
+      - name: Start Dream & Marlow for 10 minutes
+        env:
+          SERVER_HOST: craftvn.net  # đổi thành IP / domain server bạn
+          SERVER_PORT: 25565                    # đổi theo port server
+          AUTH_MODE: offline                     # hoặc 'microsoft' nếu xài acc real
         run: |
-          # 43200s = 12 tiếng, thích thì tăng/giảm
-          timeout 43200s npm start || true
+          timeout 60000s npm start || true
           
