--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,7 +20,7 @@ jobs:
 
       - name: Install dependencies
         run: |
-          npm install mineflayer mineflayer-pathfinder mineflayer-auto-eat mineflayer-pvp
+          npm install
 
       - name: Start bot
         env:
