--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,7 +17,6 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: '18'
-          cache: 'npm'
 
       - name: Install dependencies
         run: |
@@ -28,6 +27,6 @@ jobs:
           SERVER_HOST: craftvn.net
           SERVER_PORT: 25565
         run: |
-          # 43200s = 12 tiếng, hết giờ thì nó dừng, có lỗi cũng kệ
+          # 43200s = 12 tiếng
           timeout 43200s npm start || true
           
